[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1.0"
description = "Python Utilities Collection."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Mirek Forczek", email = "mirekforczek@poczta.onet.pl" } ]
dependencies = []

[project.urls]
Homepage = "https://github.com/mirekfoo/pyutils"
Repository = "https://github.com/mirekfoo/pyutils"
Changelog = "https://github.com/mirekfoo/pyutils/releases"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"flake8",
	"black",
	"isort",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"pyutils" = ["py.typed"]

