[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.2.2"
description = "Python Utilities Collection."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Mirek Forczek", email = "mirekforczek@poczta.onet.pl" } ]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"  
]

[project.urls]
Homepage = "https://github.com/mirekfoo/pyutils"
Repository = "https://github.com/mirekfoo/pyutils"
Changelog = "https://github.com/mirekfoo/pyutils/releases"


[project.optional-dependencies]
dev = [
  "bumpver"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyutils" = ["py.typed"]

[tool.bumpver]
current_version = "0.2.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version: {old_version} → {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/pyutils/__init__.py" = ['__version__ = "{version}"']
